[project]
name = "my-uv-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nkiyo", email = "nakahara.kiyoshi@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.37",
    "langchain>=1.2.7",
    "langchain-aws>=1.2.1",
    "pydantic>=2.12.5",
]

[project.scripts]
my-uv-tool = "my_uv_tool:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
